# Edge-AI-Object-Detection-Jetson-Nano

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt
benchmarks/: benchmark_runner.py  compare_pipelines.py
benchmarks/results/: comparison_report.md  cpp_benchmark.json
configs/: coco_classes.yaml  pipeline_config.yaml  training_config.yaml
cpp/: main.cpp
cpp/camera/: camera_capture.cpp  camera_capture.h
cpp/cuda_utils/: cuda_helpers.h  gpu_memory_pool.cpp  gpu_memory_pool.h  preprocessor.cpp  preprocessor.h
cpp/inference/: detection.h  trt_engine.cpp  trt_engine.h
cpp/pipeline/: pipeline.cpp  pipeline.h  thread_safe_queue.h
docs/: api_reference.md  architecture.md  jetson_optimization.md
models/: training_metrics.json
scripts/: build.sh  run_baseline.sh  run_pipeline.sh  setup_jetson.sh
src/python/: __init__.py
src/python/export/: onnx_export.py  tensorrt_build.py
src/python/training/: dataset_generator.py  train.py
src/python/utils/: config.py  logger.py  visualization.py
tests/: test_benchmark.py  test_inference.cpp  test_pipeline.cpp
